--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/src/assets/main.scss" lang="scss" />
 
     <link
@@ -46,17 +44,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <span id="cursor">
-      <svg
-        data-mode="pen"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 24 24"
-        fill="currentColor"
-        style="width: 20px; height: 20px">
-        <path
-          d="M21.731 2.269a2.625 2.625 0 0 0-3.712 0l-1.157 1.157 3.712 3.712 1.157-1.157a2.625 2.625 0 0 0 0-3.712ZM19.513 8.199l-3.712-3.712-12.15 12.15a5.25 5.25 0 0 0-1.32 2.214l-.8 2.685a.75.75 0 0 0 .933.933l2.685-.8a5.25 5.25 0 0 0 2.214-1.32L19.513 8.2Z" />
-      </svg>
-    </span>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
